update card display, fix text size, modal and navigation on smaller screens

--- a/public/assets/sass/_shared.scss
+++ b/public/assets/sass/_shared.scss
@@ -228,6 +228,10 @@ a {
   font-weight: 500;
   letter-spacing: 1px;
   margin: 0.95em 0 0.65em 0;
+
+  @media screen and (max-width: $sm) {
+    font-size: 1.5rem;
+  }
 }
 
 .subtitle {
@@ -241,8 +245,12 @@ a {
   font-size: 1.1rem;
   padding-bottom: 0.75rem;
 
+  @media screen and (max-width: $sm) {
+    font-size: 1rem;
+  }
+
   &.less {
-    opacity: 0.8;
+    opacity: 0.7;
   }
 }
 
