--- a/public/assets/styles.scss
+++ b/public/assets/styles.scss
@@ -72,6 +72,12 @@ header {
   background-position: 0% 60%;
   border-bottom: 3px solid $primary-400;
 
+  @media screen and (orientation: landscape) {
+    @include maxMedia($md) {
+      height: 115vh;
+    }
+  }
+
   nav {
     position: fixed;
     left: 0;
@@ -123,12 +129,11 @@ header {
           align-items: center;
           cursor: pointer;
           transition: all 0.6s ease-in-out;
-          width: 2rem;
-          height: 2rem;
-          border: 0.1em solid white;
+          width: 1.25rem;
+          height: 1.25rem;
 
           .btn-line {
-            width: 1.35rem;
+            width: 1.25rem;
             height: 0.15rem;
             background-color: white;
             border-radius: 0.2em;
@@ -139,7 +144,7 @@ header {
             &::after {
               content: "";
               position: absolute;
-              width: 1.35rem;
+              width: 1.25rem;
               height: 0.15rem;
               background-color: white;
               border-radius: 0.2em;
@@ -245,6 +250,11 @@ header {
       font-style: italic;
       margin-top: 1rem;
       margin-bottom: 0.25em;
+
+      @include maxMedia($sm) {
+        font-size: 2rem;
+        margin-bottom: 0.1em;
+      }
     }
 
     h2 {
@@ -252,6 +262,11 @@ header {
       font-size: 2rem;
       font-family: $fontSans;
       font-weight: 500;
+
+      @include maxMedia($sm) {
+        margin-top: 0.1em;
+        font-size: 1.25rem;
+      }
     }
 
     .cta {
@@ -269,39 +284,43 @@ header {
 // Main #Projetos
 
 main {
-  width: calc(100% - (2 * $padding));
+  width: 100%;
+  padding: 0 $padding;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
-  padding: 0 0.25rem;
   padding-bottom: 1.5rem;
 
   .project-list {
     $gap: var(--gap);
     --gap: 2.5rem;
 
-    @include maxMedia($xxl) {
-      --gap: 1.25rem;
-    }
-    @include maxMedia($lg) {
-      --gap: 0.75rem;
-    }
-    @include maxMedia($sm) {
-      --gap: 0.25rem;
-    }
-
     width: 100%;
-    min-height: 55vh;
-
+    padding: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 450px));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 390px));
     grid-template-rows: auto;
     justify-content: center;
 
-    grid-gap: calc($gap / 2 + $gap) $gap;
-    padding-right: $gap;
+    @include maxMedia($sm) {
+      --gap: 1.25rem 0.25rem;
+    }
+    @include maxMedia($lg) {
+      grid-template-columns: repeat(auto-fit, minmax(295px, 350px));
+      --gap: 1.25rem 0.75rem;
+    }
+    @include maxMedia($xl) {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
+    }
+    @include maxMedia($xxl) {
+      --gap: 1.5rem 1.25rem;
+    }
+    @include minMedia($x3l) {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 450px));
+    }
+
+    gap: $gap;
     list-style: none;
 
     .card {
@@ -345,16 +364,12 @@ main {
       .card-item {
         position: relative;
         width: 100%;
-        height: 55vh;
+        height: 500px;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
         background: $black-600;
-
-        @include maxMedia($xl) {
-          height: 65vh;
-        }
 
         @mixin background {
           content: "";
@@ -669,6 +684,10 @@ main {
       text-align: justify;
       line-height: 1.25;
       text-indent: 2.5ch;
+
+      @include maxMedia($sm) {
+        font-size: 1rem;
+      }
     }
   }
 }
@@ -693,12 +712,15 @@ main {
     @mixin field {
       width: 50%;
       font-size: 1.2rem;
-      // font-family: $fontSerif;
       font-family: sans-serif;
       padding: 0.25rem 0.75rem;
       margin: 0.75rem 0;
       border-radius: 0.25rem;
       border: 1px solid $black-900;
+
+      @include maxMedia($sm) {
+        font-size: 1rem;
+      }
 
       @include maxMedia($xxl) {
         width: 60%;
@@ -1027,6 +1049,10 @@ footer {
       text-align: justify;
       text-indent: 2ch;
 
+      @include maxMedia($sm) {
+        font-size: 1rem;
+      }
+
       .join {
         text-indent: 0;
       }
@@ -1076,6 +1102,10 @@ footer {
 
     .rcol {
       grid-template-rows: auto auto auto;
+
+      h1 {
+        margin: 1.75em 0 0.25em 0;
+      }
     }
 
     & button[close-btn] {
@@ -1084,18 +1114,28 @@ footer {
     }
   }
 
-  @include maxMedia($xl) {
-    width: 85%;
-    height: 75%;
+  @include minMedia($x3l) {
+    width: 65%;
+    height: 60%;
   }
-
   @media screen and (max-width: 1919px) and (min-width: 1281px) {
     width: 75%;
     height: 70%;
   }
+  @include maxMedia($xl) {
+    width: 85%;
+    height: 75%;
+  }
+  @include maxMedia($md) {
+    width: 90%;
+    height: 80%;
+  }
+  @include maxMedia($sm) {
+    width: 95%;
+    height: 95%;
 
-  @include minMedia($x3l) {
-    width: 65%;
-    height: 60%;
+    .btns {
+      flex-direction: column;
+    }
   }
 }
